<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        android:text="@string/profile_page"
        android:textColor="#000"
        android:layout_marginTop="30sp"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/profile_plz_picture"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="10sp"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:background="@drawable/ic_add_a_photo_black_24dp"
        android:layout_gravity="center"
        android:maxHeight="120sp"
        android:maxWidth="120sp" />

    <LinearLayout
        android:id="@+id/llBottomNav"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/btnGallery"
            android:text="@string/profile_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edge_black"/>

        <Button
            android:id="@+id/btnCamera"
            android:layout_marginLeft="20sp"
            android:text="@string/profile_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edge_black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0sp">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/profile_profile"
            android:fontFamily="@font/firasans_bold"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="130sp"
            android:layout_height="5sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/line_background"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="360sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8sp"
        android:orientation="vertical"
        android:paddingRight="30sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15sp">

            <ImageView
                android:layout_width="36sp"
                android:layout_height="36sp"
                app:srcCompat="@drawable/ic_email_black_24dp"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_plzemail"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:paddingLeft="15sp">
            <ImageView
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_phone_android_black_24dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_plzcallnumber"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:paddingLeft="15sp">

            <ImageView
                android:layout_width="36sp"
                android:layout_height="36sp"
                app:srcCompat="@drawable/ic_wc_black_24dp"
                android:layout_gravity="center"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:paddingLeft="15sp">

            <ImageView
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_assignment_ind_black_24dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:hint="@string/proflie_birth"
                android:id="@+id/tvDate"
                android:layout_gravity="center"
                android:textSize="20sp"/>

            <!--<TextView-->
                <!--android:id="@+id/ageCount"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:textSize="20sp" />-->

            <!--</DatePicker>-->
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/prevToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:layout_gravity="center"
            android:text="@string/profile_previous"
            android:textSize="15sp"
            android:layout_marginLeft="20sp"
            android:gravity="center_horizontal"

            android:background="@drawable/rectangular_pink"/>
        <View
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:layout_marginRight="20sp"
            android:layout_gravity="center"
            android:text="@string/profile_next"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:background="@drawable/rectangular_pink"/>
    </LinearLayout>

</LinearLayout>