<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/welcome1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80sp"
            android:text="@string/welcome_mayday"
            android:fontFamily="@font/firasans_bold"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registedUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:text="@string/welcome_register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/startNowbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="10sp"
            android:background="@color/black"
            android:text="@string/welcome_start" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="245sp"
            android:layout_gravity="center"
            android:background="@drawable/manypeople"/>

    </LinearLayout>


</LinearLayout>

