<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--<ImageView android:src="@drawable/logo_transparent1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="180dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/login_top"
            android:fontFamily="@font/firasans_bold"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="20sp"
                android:text="@string/i_will_help_you"
                android:textStyle="italic"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/smilemaydayicon"/>
        </LinearLayout>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="ID"
                android:textColor="#ffffff"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/login_login"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="30dp">

                <com.kakao.usermgmt.LoginButton
                    android:visibility="gone"
                    android:id="@+id/btn_kakao_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />
                <ImageView
                    android:id="@+id/fake_kakao"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/kakaolink_btn_medium"/>

            </FrameLayout>

            <View
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/dotted_line_vertical"
                android:layerType="software" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <com.facebook.login.widget.LoginButton
                    android:visibility="gone"
                    android:id="@+id/btn_facebook_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/fake_facebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/facebook_logo"/>
            </FrameLayout>

            <View
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/dotted_line_vertical"
                android:layerType="software" />

            <FrameLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp">
                <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/btn_naver_login"
                android:visibility="gone"/>
                <ImageView
                    android:id="@+id/fake_naver"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/naver_icon"/>

            </FrameLayout>


        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_haveid"
            android:gravity="center"
            android:textSize="16sp"/>

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/login_makeid"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16sp"/>




    </LinearLayout>
</ScrollView>